// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HalfIcon component Renders correctly it renders Default star HalfIcon 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HalfIcon
    type="star"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(View)
          position="absolute"
        >
          <Icon
            color="#e9e9ed"
            name="star"
            size={24}
            themeName="vibrantCyan"
          />
        </Styled(View)>,
        <Styled(View)
          backgroundColor="transparent"
        >
          <Icon
            name="halfStar"
            size={24}
            themeName="vibrantCyan"
          />
        </Styled(View)>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Icon
            color="#e9e9ed"
            name="star"
            size={24}
            themeName="vibrantCyan"
          />,
          "position": "absolute",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "color": "#e9e9ed",
            "name": "star",
            "size": 24,
            "themeName": "vibrantCyan",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "backgroundColor": "transparent",
          "children": <Icon
            name="halfStar"
            size={24}
            themeName="vibrantCyan"
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "color": undefined,
            "name": "halfStar",
            "size": 24,
            "themeName": "vibrantCyan",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(View)
            position="absolute"
          >
            <Icon
              color="#e9e9ed"
              name="star"
              size={24}
              themeName="vibrantCyan"
            />
          </Styled(View)>,
          <Styled(View)
            backgroundColor="transparent"
          >
            <Icon
              name="halfStar"
              size={24}
              themeName="vibrantCyan"
            />
          </Styled(View)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Icon
              color="#e9e9ed"
              name="star"
              size={24}
              themeName="vibrantCyan"
            />,
            "position": "absolute",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "#e9e9ed",
              "name": "star",
              "size": 24,
              "themeName": "vibrantCyan",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "backgroundColor": "transparent",
            "children": <Icon
              name="halfStar"
              size={24}
              themeName="vibrantCyan"
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": undefined,
              "name": "halfStar",
              "size": 24,
              "themeName": "vibrantCyan",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`HalfIcon component Renders correctly it renders Dot HalfIcon 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HalfIcon
    type="dot"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(View)
          position="absolute"
        >
          <Icon
            color="#e9e9ed"
            name="dot"
            size={24}
            themeName="vibrantCyan"
          />
        </Styled(View)>,
        <Styled(View)
          backgroundColor="transparent"
        >
          <Icon
            name="halfDot"
            size={24}
            themeName="vibrantCyan"
          />
        </Styled(View)>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Icon
            color="#e9e9ed"
            name="dot"
            size={24}
            themeName="vibrantCyan"
          />,
          "position": "absolute",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "color": "#e9e9ed",
            "name": "dot",
            "size": 24,
            "themeName": "vibrantCyan",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "backgroundColor": "transparent",
          "children": <Icon
            name="halfDot"
            size={24}
            themeName="vibrantCyan"
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "color": undefined,
            "name": "halfDot",
            "size": 24,
            "themeName": "vibrantCyan",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(View)
            position="absolute"
          >
            <Icon
              color="#e9e9ed"
              name="dot"
              size={24}
              themeName="vibrantCyan"
            />
          </Styled(View)>,
          <Styled(View)
            backgroundColor="transparent"
          >
            <Icon
              name="halfDot"
              size={24}
              themeName="vibrantCyan"
            />
          </Styled(View)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Icon
              color="#e9e9ed"
              name="dot"
              size={24}
              themeName="vibrantCyan"
            />,
            "position": "absolute",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "#e9e9ed",
              "name": "dot",
              "size": 24,
              "themeName": "vibrantCyan",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "backgroundColor": "transparent",
            "children": <Icon
              name="halfDot"
              size={24}
              themeName="vibrantCyan"
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": undefined,
              "name": "halfDot",
              "size": 24,
              "themeName": "vibrantCyan",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
